--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -92,7 +92,7 @@
                                                             <span class="icon-name"></span>
                                                         </a>
                                                         <a ID="lbEdit" href="@Url.Action("ActualizaParametros", "Empresas", new { id = item.IdEmpresa })">
-                                                            <i class="material-icons">edit</i>
+                                                            <i class="zmdi zmdi-settings"></i>
                                                             <span class="icon-name"></span>
                                                         </a>
                                                         <a ID="lbBorrar" href="@Url.Action("BorrarEmpresa", "Empresas", new { id = item.IdEmpresa })">
