--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RolCompras.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Presentacion.Models.Catalogos.RolDto
+﻿@model MVC.Presentacion.Models.Catalogos.RolCompras
 
 @Html.HiddenFor(m => m.IdRol)
 @Html.HiddenFor(m => m.IdEmpresa)
@@ -32,37 +32,37 @@
 @Html.HiddenFor(m => m.AppTomaLecturaReporteDelDia)
 @Html.HiddenFor(m => m.AppTraspasoEstacionCarb)
 @Html.HiddenFor(m => m.AppTraspasoPipa)
-@Html.CheckBoxFor(m => m.CatInsertarUsuario)
-@Html.CheckBoxFor(m => m.CatModificarUsuario)
-@Html.CheckBoxFor(m => m.CatEliminarUsuario)
-@Html.CheckBoxFor(m => m.CatConsultarUsuario)
-@Html.CheckBoxFor(m => m.CatInsertarProveedor)
-@Html.CheckBoxFor(m => m.CatEliminarProveedor)
-@Html.CheckBoxFor(m => m.CatConsultarProveedor)
-@Html.CheckBoxFor(m => m.CatModificarProveedor)
-@Html.CheckBoxFor(m => m.CatInsertarProducto)
-@Html.CheckBoxFor(m => m.CatModificarProducto)
-@Html.CheckBoxFor(m => m.CatEliminarProducto)
-@Html.CheckBoxFor(m => m.CatConsultarProducto)
-@Html.CheckBoxFor(m => m.CatInsertarCentroCosto)
-@Html.CheckBoxFor(m => m.CatModificarCentroCosto)
-@Html.CheckBoxFor(m => m.CatEliminarCentroCosto)
-@Html.CheckBoxFor(m => m.CatConsultarCentroCosto)
-@Html.CheckBoxFor(m => m.CatInsertarCuentaContable)
-@Html.CheckBoxFor(m => m.CatModificarCuentaContable)
-@Html.CheckBoxFor(m => m.CatEliminarCuentaContable)<
-@Html.CheckBoxFor(m => m.CatConsultarCuentaContable)
-@Html.CheckBoxFor(m => m.CatInsertarCliente)
-@Html.CheckBoxFor(m => m.CatModificarCliente)
-@Html.CheckBoxFor(m => m.CatEliminarCliente)
-@Html.CheckBoxFor(m => m.CatConsultarCliente)
-@Html.CheckBoxFor(m => m.CatAsignarChoferPuntoVenta)
-@Html.CheckBoxFor(m => m.CatEliminarPuntoVenta)
-@Html.CheckBoxFor(m => m.CatConsultarPuntoVenta)
-@Html.CheckBoxFor(m => m.CatAsignarEquipoTransporte)
-@Html.CheckBoxFor(m => m.CatModificarEquipoTransporte)
-@Html.CheckBoxFor(m => m.CatEliminarEquipoTransporte)
-@Html.CheckBoxFor(m => m.CatConsultarEquipoTransporte)
+@Html.HiddenFor(m => m.CatInsertarUsuario)
+@Html.HiddenFor(m => m.CatModificarUsuario)
+@Html.HiddenFor(m => m.CatEliminarUsuario)
+@Html.HiddenFor(m => m.CatConsultarUsuario)
+@Html.HiddenFor(m => m.CatInsertarProveedor)
+@Html.HiddenFor(m => m.CatEliminarProveedor)
+@Html.HiddenFor(m => m.CatConsultarProveedor)
+@Html.HiddenFor(m => m.CatModificarProveedor)
+@Html.HiddenFor(m => m.CatInsertarProducto)
+@Html.HiddenFor(m => m.CatModificarProducto)
+@Html.HiddenFor(m => m.CatEliminarProducto)
+@Html.HiddenFor(m => m.CatConsultarProducto)
+@Html.HiddenFor(m => m.CatInsertarCentroCosto)
+@Html.HiddenFor(m => m.CatModificarCentroCosto)
+@Html.HiddenFor(m => m.CatEliminarCentroCosto)
+@Html.HiddenFor(m => m.CatConsultarCentroCosto)
+@Html.HiddenFor(m => m.CatInsertarCuentaContable)
+@Html.HiddenFor(m => m.CatModificarCuentaContable)
+@Html.HiddenFor(m => m.CatEliminarCuentaContable)<
+@Html.HiddenFor(m => m.CatConsultarCuentaContable)
+@Html.HiddenFor(m => m.CatInsertarCliente)
+@Html.HiddenFor(m => m.CatModificarCliente)
+@Html.HiddenFor(m => m.CatEliminarCliente)
+@Html.HiddenFor(m => m.CatConsultarCliente)
+@Html.HiddenFor(m => m.CatAsignarChoferPuntoVenta)
+@Html.HiddenFor(m => m.CatEliminarPuntoVenta)
+@Html.HiddenFor(m => m.CatConsultarPuntoVenta)
+@Html.HiddenFor(m => m.CatAsignarEquipoTransporte)
+@Html.HiddenFor(m => m.CatModificarEquipoTransporte)
+@Html.HiddenFor(m => m.CatEliminarEquipoTransporte)
+@Html.HiddenFor(m => m.CatConsultarEquipoTransporte)
 <tr>
     
 <tr>
