--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -496,7 +496,7 @@
                             <li>
                                 <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">content_paste</i><span>Producto</span> </a>
                                 <ul class="ml-menu">
-                                    <li>@Html.ActionLink("Producto", "Producot", "Producto")</li>
+                                    <li>@Html.ActionLink("Producto", "Producto", "Producto")</li>
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
                                     <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
                                     <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
